--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "graphql": "^16.5.0",
+    "moment-timezone": "^0.5.43",
     "mongoose": "^6.5.1",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
